# freecube

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security.yml
docs/: build.md  loading_content.md  sources.md
include/cpu/: core.hpp
include/dol/: dol_loader.hpp  validate.hpp
include/loader/: iso.hpp  loader.hpp
include/util/: log.hpp  macros.hpp
src/: dol_loader.cpp  main.cpp  validate.cpp
